--- a/wp-content/themes/maximeferraille/style.css
+++ b/wp-content/themes/maximeferraille/style.css
@@ -455,7 +455,7 @@ footer a:hover {
 .project-title a {
   font-family: 'Lato',sans-serif;
   font-weight: 100;
-  color:;
+  color: black;
 }
 
 .project-title {
