--- a/wp-content/themes/maximeferraille/style.css
+++ b/wp-content/themes/maximeferraille/style.css
@@ -453,9 +453,16 @@ footer a:hover {
 }
 
 .project-title a {
+  margin-top: 25px;
   font-family: 'Lato',sans-serif;
-  font-weight: 100;
+  font-weight: 400;
   color: black;
+  text-decoration: none;
+}
+
+.project-title a:hover {
+  text-decoration: underline;
+  font-weight: 700;
 }
 
 .project-title {
