fix css & single page project

--- a/wp-content/themes/maximeferraille/style.css
+++ b/wp-content/themes/maximeferraille/style.css
@@ -487,8 +487,12 @@ footer a:hover {
 }
 
 .project-picture img {
-  width: 45%;
+  width: 90%;
   margin: 20px;
+}
+
+.project-title h2 {
+  margin-bottom: 40px;
 }
 
 
